classDiagram
    class BackgroundWorker {
        +cache_manager: CacheManager
        +temp_dir: str
        +running: bool
        +processing_queue: Queue
        +job_status: dict
        +jobs_file: Path
        +start()
        +stop()
        +add_job(job_id, job)
        +get_job_status(job_id) JobStatus
        +get_all_jobs() dict
        +load_job_statuses()
        +save_job_statuses()
        -_worker_loop()
        -_process_job(job_id)
        -_reconstruct_jobs_from_cache()
    }

    class CacheManager {
        +cache_dir: Path
        +cache_expiry_days: int
        +cache_index: dict
        +load_cache_index()
        +save_cache_index()
        +get_repo_hash(repo_url) str
        +get_cached_docs(repo_url) str
        +add_to_cache(repo_url, docs_path)
        +remove_from_cache(repo_url)
        +cleanup_expired_cache()
    }

    class JobStatus {
        +job_id: str
        +repo_url: str
        +status: str
        +created_at: datetime
        +started_at: datetime
        +completed_at: datetime
        +error_message: str
        +progress: str
        +docs_path: str
        +main_model: str
        +commit_id: str
    }

    class CacheEntry {
        +repo_url: str
        +repo_url_hash: str
        +docs_path: str
        +created_at: datetime
        +last_accessed: datetime
    }

    BackgroundWorker "1" --> "1" CacheManager : delegates cache lookups
    BackgroundWorker "1" o-- "many" JobStatus : tracks
    CacheManager "1" o-- "many" CacheEntry : indexes
